z-index fix (content was over the menu on small devices)

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -29,7 +29,7 @@
   }
 
   .mdl-layout__content {
-    z-index: 5;
+    z-index: 4;
   }
 
   .mdl-data-table {
